Fixed z-index for modals

--- a/resources/sass/components/modal.scss
+++ b/resources/sass/components/modal.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
 .v--modal-overlay {
+    z-index: 10000 !important;
     background: hsla(210, 20%, 10%, .15) !important;
 }
 
